--- a/css/styles.css
+++ b/css/styles.css
@@ -1,298 +1,317 @@
 /* Reset */
+:root {
+  --primary-color: #084e3c;
+  --secondary-color: #ffd125;
+  --light-color: #f4e8d4;
+
+  /* Cores de Feedback */
+  --success-color: #28a745;
+  --error-color: #dc3545;
+
+  /* Background */
+  --bg-light: #345f55;
+  --bg-gradient: #1f4038;
+}
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family:"Roboto", serif;
-    font-size: 24px;
-    font-weight: bold;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", serif;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 button {
-    border: none;
+  border: none;
 }
 
 /* Background */
 body {
-    background-image: linear-gradient( #A8D1FF,#2B7CFF);
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  background-image: linear-gradient(var(--primary-color), var(--bg-gradient));
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Main */
-    .container-bingo {
-    border-radius: 32px;
-    height: 90vh;
-    width: 90vw;
-    background-color: #efefef;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0 4px 8px rgba(21, 21, 32, 0.5);
+.container-bingo {
+  border-radius: 32px;
+  height: 90vh;
+  width: 90vw;
+  background-color: var(--bg-light);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 4px 8px rgba(21, 21, 32, 0.5);
 }
 
 .container-hub {
-    display: flex;
-    align-items: end;
-    width: 90%;
-    height: fit-content;
-    padding: 1rem 0;
+  display: flex;
+  align-items: end;
+  width: 90%;
+  height: fit-content;
+  padding: 1rem 0;
 }
 
 /* BOTÕES */
 .container-button {
-    flex: 1;
-    display: flex;
-    width: 30%;
+  flex: 1;
+  display: flex;
+  width: 30%;
 }
 
 .container-button button {
-    border-radius: 5rem;
-    line-height: normal;
-    height: 2rem;
-    width: 6rem;
-    margin-right: 1rem;
-    font-weight: 600;
-    transition: 0.4s;
-    border: 2px solid #2B7CFF;
-    color: #2B7CFF;
+  border-radius: 5rem;
+  line-height: normal;
+  height: 2rem;
+  width: 6rem;
+  margin-right: 1rem;
+  font-weight: 600;
+  transition: 0.4s;
+  border: 2px solid var(--light-color);
+  color: var(--light-color);
+  background-color: var(--bg-light);
 }
 
 .container-button button:hover {
-    color: #1972ff;
-    border: 2px solid #1972ff;
-    background-color: #C8F1FF;
-    cursor: pointer;
+  color: var(--primary-color);
+  border: 2px solid var(--primary-color);
+  background-color: var(--secondary-color);
+  cursor: pointer;
 }
 
 /* Ultimo número */
 .container-last-number {
-    display: flex;
-    gap: .4rem;
-    justify-content: end;
+  display: flex;
+  gap: 0.4rem;
+  justify-content: end;
 }
 
-.container-last-number p{
-    color: #1972ff;
-    line-height: 18vh;
+.container-last-number p {
+  color: var(--secondary-color);
+  line-height: 18vh;
 }
 
 .last-number {
-    height: 18vh;
-    width: 18vh;
-    border: 4px solid #1972ff;
-    color: #1972ff;
-    border-radius: 24px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 2rem;
+  height: 18vh;
+  width: 18vh;
+  border: 4px solid var(--secondary-color);
+  color: var(--secondary-color);
+  border-radius: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
 }
 
 /* NÚMEROS */
 
 #container-numbers {
-    height: 70%;
-    width: 90%;
-    display: grid;
-    grid-template-columns: repeat(15, 1fr);
+  height: 70%;
+  width: 90%;
+  display: grid;
+  grid-template-columns: repeat(15, 1fr);
 }
 
 .number {
-    color: #1972ff;
-    border: 2px solid #1972ff;
-    width: 2.4rem;
-    height: 2.4rem;
-    margin: 7.5px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.3rem;
-    transition: .3s;
-    cursor: pointer;
+  color: var(--light-color);
+  border: 2px solid var(--light-color);
+  background-color: var(--bg-light);
+  width: 2.4rem;
+  height: 2.4rem;
+  margin: 7.5px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.3rem;
+  transition: 0.3s;
+  cursor: pointer;
 }
 
 .number:hover {
-    background-color: #ddd;
+  background-color: var(--primary-color);
 }
 
 .chosen {
-    background-color: #1972ff;
-    color: #f5f5f5;
-    border: none;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  border: none;
 }
 
 .chosen:hover {
-    background-color: #1972ff;
+  background-color: var(--primary-color);
+  color: var(--light-color);
 }
 
 /* ALERTA */
 .alert {
-    position: absolute;
-    right: 50vw - 400px;
-    top: 25%;
-    height: 300px;
-    width: 800px;
-    background-color: #f5f5f5;
-    border-radius: 1rem;
-    padding: 4rem 2rem;
+  position: absolute;
+  right: 50vw - 400px;
+  top: 25%;
+  height: 300px;
+  width: 800px;
+  background-color: var(--light-color);
+  border-radius: 1rem;
+  padding: 4rem 2rem;
 }
 
 .alert p {
-    font-size: 1.2rem;
-    text-align: center;
-    margin-bottom: 2rem;
+  font-size: 1.2rem;
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 .container-options {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
 .option {
-    font-size: 1.4rem;
-    padding: 1rem 2rem;
-    border-radius: 3rem;
-    transition: .3s;
-    color: #111;
+  font-size: 1.4rem;
+  padding: 1rem 2rem;
+  border-radius: 3rem;
+  transition: 0.3s;
+  color: #111;
 }
 
 .back {
-    background-color: #dd3333;
+  background-color: #dd3333;
 }
 
 .back:hover {
-    cursor: pointer;
-    background-color: #bb1111;
-    color: #000;
+  cursor: pointer;
+  background-color: #bb1111;
+  color: #000;
 }
 
 .remove {
-    background-color: #dd9933;
+  background-color: #dd9933;
 }
 
 .remove:hover {
-    cursor: pointer;
-    background-color: #cc8822;
-    color: #000;
+  cursor: pointer;
+  background-color: #cc8822;
+  color: #000;
 }
 
 .celebration {
-    transition: .5s;
-    position: absolute;
-    top:0;
-    height: 100%;
-    border-radius: 1rem;
+  transition: 0.5s;
+  position: absolute;
+  top: 0;
+  height: 100%;
+  border-radius: 1rem;
+}
+
+.celebration-container {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--bg-light);
 }
 
 /* Responsividade */
-@media(max-width: 1290px) {
-    body {
-        height: auto;
-    }
+@media (max-width: 1290px) {
+  body {
+    height: auto;
+  }
 
-    .container-bingo {
-        margin: 1rem auto;
-    }
+  .container-bingo {
+    margin: 1rem auto;
+  }
 
-    .container-last-number {
-        display: flex;
-        gap: .4rem;
-        justify-content: end;
-    }
-    
-    .container-last-number p{
-        color: #1972ff;
-        line-height: 18vh;
-    
-    }
-    
-    .container-last-number i{
-        font-size: 1.4rem;
-    }
+  .container-last-number {
+    display: flex;
+    gap: 0.4rem;
+    justify-content: end;
+  }
 
-    .container-bingo {
-        height: auto;
-    }
-    
+  .container-last-number p {
+    line-height: 18vh;
+  }
 
-    #container-numbers {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-    
+  .container-last-number i {
+    font-size: 1.4rem;
+  }
+
+  .container-bingo {
+    height: auto;
+  }
+
+  #container-numbers {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
 /* Tablet */
-@media(max-width: 768px) {
+@media (max-width: 768px) {
+  body {
+    background-image: none;
+    height: auto;
+  }
 
-    body {
-        background-image: none;
-        height: auto;
-    }
+  .container-bingo {
+    margin: 0;
+    height: fit-content;
+    width: 100%;
+    border-radius: 0;
+  }
 
-    .container-bingo {
-        margin: 0;
-        height: fit-content;
-        width: 100%;
-        background-color: #efefef;
-        border-radius: 0;
-    }
+  .container-hub {
+    margin-top: 4rem;
+    padding: 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-    .container-hub {
-        margin-top: 4rem;
-        padding: 0;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
+  .container-button {
+    order: 2;
+    align-items: center;
+    justify-content: center;
+    gap: 0.4rem;
+  }
 
-    .container-button {
-        order: 2;
-        align-items: center;
-        justify-content: center;
-        gap: .4rem;
-    }
-    
-    .container-button button {
-        border-radius: .5rem;
-        font-size: 16px;
-        margin: 0 0 1rem 0;
-    }
+  .container-button button {
+    border-radius: 0.5rem;
+    font-size: 16px;
+    margin: 0 0 1rem 0;
+  }
 
-    .container-last-number {
-        flex: 1;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        
-    }
+  .container-last-number {
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-    .container-last-number p{
-        color: #1972ff;
-        line-height: 4rem;
-    }
+  .container-last-number p {
+    color: #1972ff;
+    line-height: 4rem;
+  }
 
-    .last-number {
-        height: 6rem;
-        width: 6rem;
-        margin-bottom: 1rem;
-    }
+  .last-number {
+    height: 6rem;
+    width: 6rem;
+    margin-bottom: 1rem;
+  }
 
-    #container-numbers {
-        width: 95%;
-    }
+  #container-numbers {
+    width: 95%;
+  }
 
-    .number {
-        width: 2rem;
-        height: 2rem;
-        font-size: 1rem;
-    }
-    
+  .number {
+    width: 2rem;
+    height: 2rem;
+    font-size: 1rem;
+  }
 }
